--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -683,3 +683,18 @@ archivePrefix = "arXiv",
   pages={203--208},
   year={2008}
 }
+
+@inproceedings{SilpaAnan2008OptimisedKF,
+  title={Optimised KD-trees for fast image descriptor matching},
+  author={Chanop Silpa-Anan and Richard I. Hartley},
+  booktitle={CVPR},
+  year={2008}
+}
+
+@inproceedings{andoni2015practical,
+  title={Practical and optimal LSH for angular distance},
+  author={Andoni, Alexandr and Indyk, Piotr and Laarhoven, Thijs and Razenshteyn, Ilya and Schmidt, Ludwig},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1225--1233},
+  year={2015}
+}
